@@ -1,3 +1,7 @@
+2016-10-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* dpxfile.c: Sync with MikTeX.
+
 2016-06-25  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>
 
 	Modify to make PDF/A generation a bit easier.
